feat: enhance content-based recommendation service with ingredient frequency calculation and TF-IDF weighting